--- a/index.html
+++ b/index.html
@@ -180,6 +180,12 @@
                 desc: "联想词猜谜，寻找你的特工同伴"
             },
             {
+                title: "你比划我猜",
+                file: "guess_word.html",
+                icon: "❓", 
+                desc: "最熟悉的你比划我猜"
+            },
+            {
                 title: "捉鬼游戏",
                 file: "zhuogui.html",
                 icon: "👻",
