--- a/zhuogui.html
+++ b/zhuogui.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <title>捉鬼大师 PRO - 海量词库版</title>
+    <title>捉鬼大师 PRO - 逻辑修复版</title>
     <style>
+        /* 样式保持一致，为节省篇幅略作压缩 */
         :root { --primary: #f39c12; --secondary: #3498db; --ghost: #2c3e50; --bg: #f5f6fa; --card-bg: #ffffff; }
         body { font-family: -apple-system, sans-serif; background: var(--bg); margin: 0; display: flex; justify-content: center; min-height: 100vh; }
         .app-container { width: 100%; max-width: 480px; padding: 20px; box-sizing: border-box; }
@@ -55,12 +56,10 @@
             </div>
             <div class="role-tag-container" id="ui-role-tags"></div>
         </div>
-
         <div class="glass-card">
             <span class="section-title">选择词库分类</span>
             <select id="select-topic" style="width:100%; padding:10px; border-radius:8px; border:1px solid #ddd;"></select>
         </div>
-
         <div class="glass-card">
             <span class="section-title">玩家名单</span>
             <div class="names-grid" id="names-container"></div>
@@ -100,158 +99,11 @@
 </div>
 
 <script>
-/**
- * 格式：词A | 词B | 模糊大类提示 | 字数
- */
 const rawLibrary = {
-    "舌尖诱惑": `
-火锅 | 冒菜 | 一种食物 | 2
-馒头 | 包子 | 一种主食 | 2
-拿铁 | 卡布 | 一种饮品 | 2
-汉堡 | 薯条 | 一种快餐 | 2
-西瓜 | 甜瓜 | 一种水果 | 2
-荔枝 | 龙眼 | 一种水果 | 2
-螺蛳粉 | 酸辣粉 | 一种面食 | 3
-鸭脖 | 鸡爪 | 一种熟食 | 2
-烤肉 | 炸鸡 | 一种荤菜 | 2
-披萨 | 意面 | 意式料理 | 2
-奶茶 | 果汁 | 一种饮品 | 2
-龙虾 | 螃蟹 | 一种海鲜 | 2
-韭菜 | 芹菜 | 一种蔬菜 | 2
-香蕉 | 芭蕉 | 一种水果 | 2
-饼干 | 薯片 | 一种零食 | 2
-红烧肉 | 锅包肉 | 一种肉菜 | 3
-冰淇淋 | 圣代 | 一种甜品 | 3/2
-麻辣烫 | 麻辣拌 | 一种小吃 | 3
-担担面 | 热干面 | 一种面食 | 3
-米线 | 粉丝 | 一种面食 | 2
-豆浆 | 牛奶 | 一种早餐饮品 | 2
-寿司 | 饭团 | 一种和式食物 | 2
-咖啡 | 可乐 | 一种深色饮品 | 2
-巧克力 | 棒棒糖 | 一种甜食 | 3
-面条 | 馄饨 | 一种传统面食 | 2
-`,
-    "数码科技": `
-微信 | 扣扣 | 社交软件 | 2
-抖音 | 快手 | 短视频软件 | 2
-淘宝 | 京东 | 购物平台 | 2
-百度 | 谷歌 | 搜索引擎 | 2
-安卓 | 苹果 | 手机系统 | 2
-键盘 | 鼠标 | 电脑硬件 | 2
-华为 | 小米 | 手机品牌 | 2
-蓝牙 | 显卡 | 电脑硬件 | 2
-手办 | 盲盒 | 一种潮玩 | 2
-耳机 | 音箱 | 播放设备 | 2
-平板 | 电脑 | 电子产品 | 2
-投影 | 电视 | 显示设备 | 2
-相机 | 手机 | 拍摄设备 | 2
-充电宝 | 适配器 | 电源配件 | 3/3
-哔哩哔哩 | 小红书 | 社区平台 | 4/3
-王者荣耀 | 和平精英 | 竞技手游 | 4
-快递 | 外卖 | 一种配送服务 | 2
-单反 | 微单 | 摄影器材 | 2
-固态 | 机械 | 存储设备 | 2
-移动 | 联通 | 电信运营商 | 2
-`,
-    "日常琐碎": `
-牙刷 | 牙签 | 日常用品 | 2
-雨伞 | 雨衣 | 雨具 | 2
-镜子 | 窗户 | 居家物品 | 2
-闹钟 | 手表 | 计时工具 | 2
-钥匙 | 门卡 | 生活工具 | 2
-胶水 | 胶带 | 文具用品 | 2
-纸巾 | 湿巾 | 清洁用品 | 2
-花瓶 | 盆栽 | 装饰物品 | 2
-电扇 | 空调 | 降温设备 | 2
-电梯 | 楼梯 | 垂直设施 | 2
-袜子 | 手套 | 服饰配件 | 2
-钢笔 | 圆珠笔 | 书写文具 | 2
-抹布 | 毛巾 | 清洁用品 | 2
-拖把 | 扫帚 | 清扫工具 | 2
-梳子 | 刷子 | 理容工具 | 2
-信封 | 明信片 | 通信载体 | 2/3
-被子 | 毯子 | 床上用品 | 2
-`,
-    "职场风云": `
-钉钉 | 飞书 | 办公软件 | 2
-加班 | 团建 | 公司活动 | 2
-老板 | 客户 | 职场人物 | 2
-周报 | 总结 | 职场文书 | 2
-面试 | 离职 | 职场流程 | 2
-奖金 | 提成 | 职场薪资 | 2
-名片 | 工牌 | 职场物件 | 2
-公章 | 签字 | 办公行为 | 2
-辞职 | 跳槽 | 职场变动 | 2
-入职 | 试用 | 职场阶段 | 2
-`,
-    "童年回忆": `
-皮卡丘 | 喷火龙 | 虚构生物 | 3
-大风车 | 动画城 | 儿童节目 | 3
-辣条 | 冰棍 | 儿童零食 | 2
-孙悟空 | 哪吒 | 神话人物 | 3/2
-葫芦娃 | 黑猫警长 | 动画角色 | 3/4
-魂斗罗 | 玛丽奥 | 经典游戏 | 3/4
-陀螺 | 溜溜球 | 一种玩具 | 2/3
-风筝 | 秋千 | 户外游戏 | 2
-西游记 | 封神榜 | 经典文学 | 3
-跳绳 | 踢毽 | 课间活动 | 2
-`,
-    "运动竞技": `
-足球 | 篮球 | 球类运动 | 2
-跳水 | 游泳 | 水上运动 | 2
-乒乓 | 羽毛 | 小球运动 | 2
-梅西 | 詹姆斯 | 著名运动员 | 2/3
-世界杯 | 奥运会 | 体育赛事 | 3
-健身 | 跑步 | 运动方式 | 2
-深蹲 | 俯卧 | 锻炼动作 | 2
-裁判 | 教练 | 体育相关人物 | 2
-`,
-    "大好河山": `
-故宫 | 长城 | 著名古迹 | 2
-外滩 | 塔尖 | 地标建筑 | 2
-杭州 | 苏州 | 江南城市 | 2
-西藏 | 新疆 | 国内边疆 | 2
-泰山 | 华山 | 著名大山 | 2
-巴黎 | 伦敦 | 欧洲城市 | 2
-洱海 | 滇池 | 著名水域 | 2
-四川 | 重庆 | 西南地区 | 2
-`,
-    "娱乐圈内": `
-周杰伦 | 陈奕迅 | 华语歌手 | 3
-成龙 | 李连杰 | 动作影星 | 2/3
-王菲 | 那英 | 实力唱将 | 2
-选秀 | 晚会 | 娱乐活动 | 2
-片酬 | 票房 | 行业数据 | 2
-初恋 | 前任 | 娱乐绯闻词 | 2
-粉丝 | 水军 | 娱乐群体 | 2
-`,
-    "动物世界": `
-哈士奇 | 萨摩耶 | 一种犬类 | 3
-企鹅 | 熊猫 | 只有两种颜色的动物 | 2
-大象 | 鲸鱼 | 巨型动物 | 2
-老虎 | 狮子 | 大型猫科 | 2
-苍蝇 | 蚊子 | 害虫 | 2
-蝴蝶 | 蜻蜓 | 飞行昆虫 | 2
-蚂蚁 | 蜜蜂 | 社会性昆虫 | 2
-蛇 | 蜥蜴 | 爬行动物 | 1/2
-`,
-    "文学经典": `
-成语 | 诗词 | 传统文学形式 | 2
-三国 | 水浒 | 名著简写 | 2
-李白 | 杜甫 | 著名诗人 | 2
-论语 | 孟子 | 儒家经典 | 2
-小说 | 散文 | 文学体裁 | 2
-武侠 | 言情 | 文学风格 | 2
-`,
-    "自然科学": `
-地震 | 海啸 | 地质灾害 | 2
-太阳 | 月亮 | 天文星体 | 2
-氧气 | 氮气 | 常见气体 | 2
-沙漠 | 雨林 | 极端环境 | 2
-重力 | 摩擦 | 物理现象 | 2
-电流 | 电压 | 电学名词 | 2
-进化 | 变异 | 生物学名词 | 2
-`,
+    "舌尖诱惑": `火锅|冒菜|一种食物|2\n馒头|包子|一种主食|2\n拿铁|卡布|一种饮品|2\n汉堡|薯条|一种快餐|2\n西瓜|甜瓜|一种水果|2\n荔枝|龙眼|一种水果|2\n螺蛳粉|酸辣粉|一种面食|3\n鸭脖|鸡爪|一种熟食|2\n烤肉|炸鸡|一种荤菜|2\n披萨|意面|意式料理|2\n奶茶|果汁|一种饮品|2\n龙虾|螃蟹|一种海鲜|2\n韭菜|芹菜|一种蔬菜|2\n香蕉|芭蕉|一种水果|2\n饼干|薯片|一种零食|2\n红烧肉|锅包肉|一种肉菜|3\n冰淇淋|圣代|一种甜品|3/2\n麻辣烫|麻辣拌|一种小吃|3\n担担面|热干面|一种面食|3\n米线|粉丝|一种面食|2\n豆浆|牛奶|一种早餐饮品|2\n寿司|饭团|一种和式食物|2\n咖啡|可乐|一种深色饮品|2\n巧克力|棒棒糖|一种甜食|3\n面条|馄饨|一种传统面食|2`,
+    "数码科技": `微信|扣扣|社交软件|2\n抖音|快手|短视频软件|2\n淘宝|京东|购物平台|2\n百度|谷歌|搜索引擎|2\n安卓|苹果|手机系统|2\n键盘|鼠标|电脑硬件|2\n华为|小米|手机品牌|2\n蓝牙|显卡|电脑硬件|2\n手办|盲盒|一种潮玩|2\n耳机|音箱|播放设备|2\n平板|电脑|电子产品|2\n投影|电视|显示设备|2\n相机|手机|拍摄设备|2\n充电宝|适配器|电源配件|3/3\n哔哩哔哩|小红书|社区平台|4/3\n王者荣耀|和平精英|竞技手游|4\n快递|外卖|一种配送服务|2\n单反|微单|摄影器材|2\n固态|机械|存储设备|2\n移动|联通|电信运营商|2`,
+    "日常琐碎": `牙刷|牙签|日常用品|2\n雨伞|雨衣|雨具|2\n镜子|窗户|居家物品|2\n闹钟|手表|计时工具|2\n钥匙|门卡|生活工具|2\n胶水|胶带|文具用品|2\n纸巾|湿巾|清洁用品|2\n花瓶|盆栽|装饰物品|2\n电扇|空调|降温设备|2\n电梯|楼梯|垂直设施|2\n袜子|手套|服饰配件|2\n钢笔|圆珠笔|书写文具|2\n抹布|毛巾|清洁用品|2\n拖把|扫帚|清扫工具|2\n梳子|刷子|理容工具|2\n信封|明信片|通信载体|2/3\n被子|毯子|床上用品|2`,
+    "职场风云": `钉钉|飞书|办公软件|2\n加班|团建|公司活动|2\n老板|客户|职场人物|2\n周报|总结|职场文书|2\n面试|离职|职场流程|2\n奖金|提成|职场薪资|2\n名片|工牌|职场物件|2\n公章|签字|办公行为|2\n辞职|跳槽|职场变动|2\n入职|试用|职场阶段|2`
 };
 
 function parseLib(lib) {
@@ -259,16 +111,23 @@ function parseLib(lib) {
     for (const key in lib) {
         final[key] = lib[key].trim().split('\n').map(line => {
             const parts = line.split('|').map(s => s.trim());
-            if(parts.length < 4) return null;
-            const [a, b, hint, len] = parts;
-            return { a, b, h: `${hint} (${len}个字)` };
-        }).filter(x => x !== null);
+            return { a: parts[0], b: parts[1], h: `${parts[2]} (${parts[3]}个字)` };
+        });
     }
     return final;
 }
 
 const library = parseLib(rawLibrary);
 let state = { total: 6, a:0, b:0, g:0, hasW: false, players: [], current: 0, flipped: false, stVisible: false };
+
+// --- 核心修复：Fisher-Yates 洗牌算法 ---
+function shuffle(array) {
+    for (let i = array.length - 1; i > 0; i--) {
+        const j = Math.floor(Math.random() * (i + 1));
+        [array[i], array[j]] = [array[j], array[i]];
+    }
+    return array;
+}
 
 function changeTotal(n) { state.total = Math.max(4, Math.min(12, state.total + n)); renderSetup(); }
 
@@ -279,12 +138,7 @@ function renderSetup() {
     let a = Math.floor(rem / 2), b = rem - a, w = 0;
     if(state.hasW) { if(a >= b) a--; else b--; w=1; }
     document.getElementById('ui-total').innerText = state.total;
-    document.getElementById('ui-role-tags').innerHTML = `
-        <span class="role-mini-tag tag-a">A组: ${a}人</span>
-        <span class="role-mini-tag tag-b">B组: ${b}人</span>
-        ${w?`<span class="role-mini-tag tag-w">白板: 1人</span>`:''}
-        <span class="role-mini-tag tag-g">鬼: ${state.g}人</span>
-    `;
+    document.getElementById('ui-role-tags').innerHTML = `<span class="role-mini-tag tag-a">A组:${a}</span><span class="role-mini-tag tag-b">B组:${b}</span>${w?`<span class="role-mini-tag tag-w">白板:1</span>`:''}<span class="role-mini-tag tag-g">鬼:${state.g}</span>`;
     const container = document.getElementById('names-container');
     const old = Array.from(container.querySelectorAll('input')).map(i => i.value);
     container.innerHTML = '';
@@ -303,15 +157,24 @@ function initTopics() {
 function onStart() {
     const topic = document.getElementById('select-topic').value;
     const items = library[topic];
-    if(!items || items.length === 0) { alert("词库暂无内容"); return; }
     const set = items[Math.floor(Math.random()*items.length)];
-    let r = [];
-    for(let i=0; i<state.a; i++) r.push({role:'A', w:set.a, l:'好人 A 组'});
-    for(let i=0; i<state.b; i++) r.push({role:'B', w:set.b, l:'好人 B 组'});
-    if(state.hasW) r.push({role:'W', w:'???', l:'白板 (好人阵营)'});
-    for(let i=0; i<state.g; i++) r.push({role:'G', w:set.h, l:'你是鬼 (看提示)'});
-    r.sort(()=>Math.random()-0.5);
-    state.players = r.map((x,i)=>({ name: document.getElementById(`n-${i+1}`).value, ...x, out: false }));
+    
+    let rolePool = [];
+    for(let i=0; i<state.a; i++) rolePool.push({role:'A', w:set.a, l:'好人 A 组'});
+    for(let i=0; i<state.b; i++) rolePool.push({role:'B', w:set.b, l:'好人 B 组'});
+    if(state.hasW) rolePool.push({role:'W', w:'???', l:'白板 (好人阵营)'});
+    for(let i=0; i<state.g; i++) rolePool.push({role:'G', w:set.h, l:'你是鬼 (看提示)'});
+
+    // 使用修复后的彻底洗牌算法
+    shuffle(rolePool);
+
+    // 重新关联昵称
+    state.players = rolePool.map((x, i) => ({
+        name: document.getElementById(`n-${i+1}`).value,
+        ...x,
+        out: false
+    }));
+
     state.current = 0; state.flipped = false;
     showPage(2); updateCard();
 }
@@ -337,8 +200,8 @@ function handleFlip() {
         inner.classList.remove('flipped');
         state.flipped = false;
         document.getElementById('front-icon').innerText = "✅";
-        document.getElementById('front-tip').innerText = "已收起，请传给下一位";
-        setTimeout(()=>{
+        document.getElementById('front-tip').innerText = "已隐藏，传给下一位";
+        setTimeout(() => {
             state.current++;
             if(state.current < state.players.length) updateCard();
             else { showPage(3); renderVote(); }
@@ -353,7 +216,7 @@ function renderVote() {
         const div = document.createElement('div');
         div.className = `vote-item ${p.out?'out':''}`;
         div.innerText = p.name;
-        div.onclick = () => { if(!p.out && confirm(`确定投出 ${p.name}?`)) { state.players[i].out=true; renderVote(); }};
+        div.onclick = () => { if(!p.out && confirm(`投出 ${p.name}?`)) { state.players[i].out=true; renderVote(); }};
         list.appendChild(div);
     });
     updateStatus();
@@ -373,9 +236,9 @@ function updateStatus() {
     const a = alive.filter(p=>p.role==='A').length;
     const b = alive.filter(p=>p.role==='B').length;
     document.getElementById('st-content').innerHTML = `好人总存活：${goods} <br> 鬼阵营存活：${g}`;
-    if(g===0) alert("🎉 好人获胜！所有的鬼已被投出局");
+    if(g===0) alert("🎉 好人获胜！所有的鬼已被投出");
     else if(g >= goods) alert("💀 鬼获胜！人数对鬼有利");
-    else if(a===0 || b===0) alert("💀 鬼获胜！好人其中一组已全灭");
+    else if(a===0 || b===0) alert("💀 鬼获胜！一组好人已全灭");
 }
 
 function showPage(n) {
